--- a/Video Three/package.json
+++ b/Video Three/package.json
@@ -12,5 +12,8 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "hardhat": "^2.12.6",
     "hh": "^0.1.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3"
   }
 }
